<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TipsActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/summary_of_method_title"
        android:textSize="30sp"/>

    <ScrollView
        android:layout_weight="0.7"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    <TextView
        android:id="@+id/sentence"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft = "20dp"
        android:paddingRight = "20dp"
        android:text="@string/summary_of_method_text"
        android:textSize="18sp"/>

    </ScrollView>

    <Button
        android:id="@+id/return_tips"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/return_btn"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

</LinearLayout>
