<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ResultActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_title"
        android:textSize="40sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:onClick="return_home"
        android:text="@string/return_btn" />

    <TextView
        android:id="@+id/result_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/result_score"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/result_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/result_time"
        android:textSize="24sp" />


    <!--
    <ListView
        android:id="@+id/quiz_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
    -->

    <!-- as title for recyclerview -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/rowNumber"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="番号" />

        <TextView
            android:id="@+id/quiz"
            android:layout_weight="0.25"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="問"
            android:background="@android:color/darker_gray" />

        <TextView
            android:id="@+id/answer"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:gravity="center"
            android:text="正解"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/right_or_not"
            android:layout_weight="0.1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="回答"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/created_on"
            android:layout_weight="0.45"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="回答時刻"/>

    </LinearLayout>

    <!-- A RecyclerView with some commonly used attributes -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/quiz_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/recyclerview_item"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</LinearLayout>