<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectGameMode"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:id="@+id/return_home"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:text="@string/return_btn"
        android:textSize="15sp"
        android:onClick="return_home"/>

    <TextView
        android:id="@+id/game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_game_mode_title"
        android:textSize="30sp"/>

    <CheckBox
        android:id="@+id/checkbox_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:text="問題数制限"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/spinner_text_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00f"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner_num"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#e6e6fa"/>

    <CheckBox
        android:id="@+id/checkbox_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="20dp"
        android:text="時間制限"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/spinner_text_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#00f"
        android:textSize="30sp" />

    <Spinner
        android:id="@+id/spinner_time"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="#e6e6fa"/>


    <Button
        android:id="@+id/start_game_btn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/select_game_mode_start_game"
        android:layout_marginTop="80dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:onClick="start_game"/>


</LinearLayout>